--- a/assets/css/5.css
+++ b/assets/css/5.css
@@ -14,7 +14,7 @@ body {
     padding: 0 0;
     margin: 0 0;
     box-sizing: border-box;
-    background-image: url("/assets/img/bg-windows-full.jpg");
+    background-image: url("/assets/img/bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -24,9 +24,10 @@ h1 {
     font-size:15px;
     color: white;
     font-weight: 300;
+    text-align: center;
 }
 .color-indice {
-    color: #E5DCC3;
+    color: #DFC886;
 }
 #popup-indice {
     position: absolute;
@@ -43,48 +44,60 @@ h1 {
     opacity: 0;
     transition: all 0.2s ease-in-out;
 }
+header {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 15px 15px;
+    background-color: white;
+}
+header > .logo {
+    width: 50px;
+    height: auto;
+    z-index: 10;
+}
+header > .play:hover {
+    cursor: pointer;
+    background-image: url("/assets/img/play-hover.png");
+    background-size: contain;
+}
+header > .logo:hover {
+    cursor: pointer;
+    background-image: url("/assets/img/logo-hover.png");
+    background-size: contain;
+}
+header > .play {
+    width: 50px;
+    height: auto;
+    z-index: 10;
+}
+
+
 .main {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 800px;
+    width: 1200px;
     height: 100%;
-    grid-gap: 50px;
-    margin-top: -150px;
+    grid-gap: 170px;
+    margin-top: -30px;
 }
-
-.main > .container-img {
-    width: 500px;
-    height: auto;
-}
-
-.main > .container-img > img {
-    position: relative;
+.main > .container-color {
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    z-index: 0;
+    flex-direction: row;
+    align-items: center;
+    grid-gap: 100px;
 }
-
-.main > .container-img > .login {
-    position: absolute;
-    top: 51.2%;
-    z-index: 1;
-    width: 283px;
-    display: flex;
-    flex-direction: column;
-    grid-gap: 11px;
-    margin-left: 110px;
+.main > .container-color > .screen {
+    width: 550px;
+    height: 350px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 0 rgba(245,245,245, 0.5);
 }
-.main > .container-img > .login > input {
-    height: 21px;
-    font-size: 12px;
-    padding: 2px 5px;
-    font-weight: 400;
-}
-
 .main > .indice-2 {
     position: absolute;
     width: 250px;
@@ -95,4 +108,11 @@ h1 {
 }
 .main > .indice-2:hover {
     cursor: pointer;
+}
+#btn-color {
+    height: 33px;
+    width: 200px;
+    background-color: #DCDCDC;
+    border-radius: 10px;
+    font-size:15px;
 }
