--- a/assets/css/5.css
+++ b/assets/css/5.css
@@ -14,10 +14,8 @@ body {
     padding: 0 0;
     margin: 0 0;
     box-sizing: border-box;
-    background-image: url("/assets/img/bg.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+    background: rgb(223,200,134);
+    background: linear-gradient(180deg, rgba(223,200,134,0.8) 0%, rgba(109,98,67,1) 100%);
     font-family: 'Poppins', sans-serif;
 }
 h1 {
@@ -34,7 +32,7 @@ h1 {
     float: left;
     width: auto;
     height: auto;
-    top: 400px;
+    top: 470px;
     left:160px;
     background: white;
     border-style: inset;
@@ -51,17 +49,12 @@ header {
     flex-direction: row;
     justify-content: space-between;
     padding: 15px 15px;
+    align-items: center;
     background-color: white;
 }
-header > .logo {
-    width: 50px;
-    height: auto;
-    z-index: 10;
-}
-header > .play:hover {
-    cursor: pointer;
-    background-image: url("/assets/img/play-hover.png");
-    background-size: contain;
+header > .number-current > p {
+    font-size: 40px;
+    margin-right: 10px;
 }
 header > .logo:hover {
     cursor: pointer;
@@ -74,14 +67,25 @@ header > .play {
     z-index: 10;
 }
 
-
+section {
+    background-image: url("/assets/img/bg.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .main {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 1200px;
+    width: 1000px;
     height: 100%;
     grid-gap: 170px;
     margin-top: -30px;
