--- a/assets/css/1.css
+++ b/assets/css/1.css
@@ -19,6 +19,9 @@ body {
 .color-indice {
     color: #DFC886;
 }
+.text-shadow{
+    text-shadow: #000000 0px 0px 10px;
+}
 #popup-indice {
     position: absolute;
     float: left;
