--- a/assets/css/4.css
+++ b/assets/css/4.css
@@ -29,6 +29,9 @@ body {
 .color-indice {
     color: #DFC886;
 }
+.text-shadow {
+    text-shadow: #000000 0px 0px 10px;
+}
 #popup-indice {
     position: absolute;
     float: left;
@@ -43,6 +46,7 @@ body {
     opacity: 0;
     transition: all 0.2s ease-in-out;
     font-family: 'Poppins', sans-serif;
+    z-index: 10;
 }
 header {
     height: 70px;
@@ -62,6 +66,7 @@ header > .number-current > p {
     font-size: 40px;
     margin-right: 10px;
     color: #DFC886;;
+    font-family: Poppins, sans-serif;
 }
 header > .logo:hover {
     cursor: pointer;
@@ -122,7 +127,7 @@ h1{
     align-items: center;
     text-align: center; 
     margin-top: 190px;
-    margin-left: 58px;
+    margin-left: 55px;
 }
 
 .boutonvalider{
