--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,6 +3,83 @@
 @tailwind utilities;
 @import "./1.css";
 
-font-face {
-    font-family: 'Poppins', sans-serif;
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  padding: 1em;
 }
+
+.accueil {
+  background-image: url("/assets/img/bg.png");
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+  background-size: cover;
+}
+body{
+  background: linear-gradient(179.48deg, rgba(223, 200, 134, 0.8) 20.3%, #6D6243 101.28%);
+  backdrop-filter: contrast(70%);
+  font-family: Poppins, sans-serif;
+  z-index: 2;
+  padding: 0 0;
+  margin: 0 0;
+}
+.title {
+  color: #E5DCC3;
+  font-size: 60px;
+  text-align: center;
+  padding-top: 12%;
+  padding-bottom: 2%;
+  text-shadow: #000000 0px 0px 10px;
+}
+header {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 15px 15px;
+  background-color: white;
+}
+header > .logo {
+  width: 50px;
+  height: auto;
+  z-index: 10;
+}
+header > .number-current > p {
+  font-size: 40px;
+  margin-right: 10px;
+}
+header > .logo:hover {
+  cursor: pointer;
+  background-image: url("/assets/img/logo-hover.png");
+  background-size: contain;
+}
+.img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: auto;
+}
+.img:hover .hover_img {
+
+  display: inline;
+  
+  }
+  .hover_img {
+    position: absolute;
+    top: 60.2%;
+    right: 36.7%;
+    width: 255px;
+    transform: translate(-50%, -50%);
+  }
+
+
+
+
+
+
